Site Plan Added

--- a/wwr/site_plan_rafting.html
+++ b/wwr/site_plan_rafting.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>[D'mikez]</h1>
-    <h2>[Michael David]</h2>
+    <h2>[Michael Davids]</h2>
     <h2>WDD 130-[01]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
