--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD 130 Home Page</title>
 </head>
 <body>
-    <img src="images/IMG-20201028-WA0001.jpg" width="200"
-height="300"/>
-    <div>
-        <h1>My name is MICHAEL DAVID SUNDAY</h1>
-        </h2>My Nick-name is D'Mikez</h2>
-        <p>Hello how are you all doing. I am from Akwa Ibom State, Nigeria. I am 22 years old and i'm single,
-            a return missionary for the Church of Jesus Christ Of Latter-Day saint and i'm currently serving
-            as the ward clerk in Afaha Inang ward, Ikot Akpaden Stake which i've been a member of this church
-            for eight years now. I'm not employ and i have this goals and desire to finish my degree course as
-            Applied Tenology to build my career and start a better job. 
-        </p>
-    </div>
+    <h1>Welcome to WDD130 Web Projects</h1>
+    <nav>
+      <a href="aboutme/index.html">About Me Page</a>             
+      <a href="wwr/index.html">White Water Rafting Website</a>
+      <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+      <a href="positioning.html">Positioning Activity</a>
+      <a href="#">Personal Website</a>
+      <a href="#">Personal Siteplan</a>
+    </nav>
+    <p>Michael David - WDD130</p>  
 </body>
 </html>
