--- a/wwr/site_plan_rafting.html
+++ b/wwr/site_plan_rafting.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>[D'mikez]</h1>
-    <h2>[Michael Davids]</h2>
+    <h2>[Michael David]</h2>
     <h2>WDD 130-[01]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
@@ -34,7 +34,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="/wwr/images/rafinglogo.png"alt="Logo image"/>
+    <img src="images/rafinglogo.png"alt="Logo image"/>
     <hr />
     <h2>Style Guide</h2>
 
@@ -72,11 +72,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font : [Source-Sans-Pro]
+      Heading Font : [Roboto]
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [roboto]
+      Paragraph Font: [Source San Pro]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
@@ -85,7 +85,7 @@
       offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
       Springs. Since 1974, we have been family owned and operated, rafting the
       Shoshone section of Glenwood Canyon and beyond.
-    </p>
+    </p> 
     <h3>Colored paragraph example</h3>
     <p class="colored">
       Trips vary from mild and great for families, to trips exclusively for
