--- a/wwr/index.html
+++ b/wwr/index.html
@@ -18,20 +18,21 @@
         <a href="site_plan_rafting.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
     </nav>
-</header>
-<div id="hero">
+
+<div>id="hero"</div> 
     <div id="hero-box">
         <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
     </div>
-    <section id="hero-msg">
+    <section>id="hero-msg"
         <h1 class="home-title">Have An Adventure</h1>
         <h4>Make Memories with Dry Oar </h4>
-        <div class='button-box'>
+        <div>class='button-box'</div> 
             <a class='book' href="contactus.html">Book Now</a>
          <div>
-         </section>
     </div>
-    <main class="home-grid">
+    </section>  
+<main>
+    class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
@@ -68,6 +69,5 @@
         <img src="images/instagram.png" alt="instagram icon">
     </a>
 </div>
-</footer>
 </body>
 </html>
